--- a/src/bin/creator/bsp/templates/hal.rs.jinja
+++ b/src/bin/creator/bsp/templates/hal.rs.jinja
@@ -17,11 +17,44 @@
 #![allow(clippy::too_many_arguments)]
 {% if mod_name %}#![cfg(feature = "{{ mod_name }}")]{% endif %}
 
-{%- set ports = [] -%}
-{%- for pin in spec.pinctrl -%}
-    {%- if pin.pin[1] not in ports -%}{% set ports = ports + [pin.pin[1]] %}{%- endif -%}
-{%- endfor -%}
-use stm32h7xx_hal::{gpio::Speed, pac, prelude::*{% for p in ports %}, gpio{{ p|lower }}::*{% endfor %}};
+{# collect unique GPIO port letters #}
+{% set ns = namespace(ports=[]) %}
+{% for pin in spec.pinctrl %}
+    {% if pin.pin[1] not in ns.ports %}{% set ns.ports = ns.ports + [pin.pin[1]] %}{% endif %}
+{% endfor %}
+
+{# derive HAL crate name from the MCU identifier #}
+{% set crate = namespace(letters='', digits='', digits_started=false, stop=false) %}
+{% for ch in spec.mcu[5:] %}
+    {% if not crate.stop %}
+        {% if ch >= 'A' and ch <= 'Z' %}
+            {% if crate.digits_started %}
+                {% set crate.stop = true %}
+            {% else %}
+                {% set crate.letters = crate.letters + ch %}
+            {% endif %}
+        {% elif ch >= '0' and ch <= '9' %}
+            {% set crate.digits_started = true %}
+            {% set crate.digits = crate.digits + ch %}
+        {% else %}
+            {% set crate.stop = true %}
+        {% endif %}
+    {% endif %}
+{% endfor %}
+{% set family = crate.letters | lower %}
+{% set nums = crate.digits %}
+{% if family == 'wb' %}
+    {% set hal_crate = 'stm32wb_hal' %}
+{% elif family == 'wl' %}
+    {% set hal_crate = 'stm32wlxx_hal' %}
+{% elif family == 'wba' %}
+    {% set hal_crate = 'stm32wba_hal' %}
+{% elif family == 'mp' %}
+    {% set hal_crate = 'stm32mp1_hal' %}
+{% else %}
+    {% set hal_crate = 'stm32' + family + nums[0:1] + 'xx_hal' %}
+{% endif %}
+use {{ hal_crate }}::{gpio::Speed, pac, prelude::*{% for p in ns.ports %}, gpio{{ p|lower }}::*{% endfor %}};
 
 {% macro gpio_bus(family) -%}
 {% if family[0:7] == "STM32H7" %}ahb4enr
@@ -32,7 +65,7 @@ use stm32h7xx_hal::{gpio::Speed, pac, prelude::*{% for p in ports %}, gpio{{ p|l
 {% else %}ahb1enr{% endif %}
 {%- endmacro %}
 {% macro port_bit(p) -%}
-{% set map = {"A":0,"B":1,"C":2,"D":3,"E":4,"F":5,"G":6,"H":7,"I":8,"J":9,"K":10} %}
+{% set map = {"A":0,"B":1,"C":2,"D":3,"E":4,"F":5,"G":6,"H":7,"I":8,"J":9,"K":10,"L":11,"M":12,"N":13,"O":14,"P":15,"Q":16,"R":17,"S":18,"T":19,"U":20,"V":21,"W":22,"X":23,"Y":24,"Z":25} %}
 {{ map[p] }}
 {%- endmacro %}
 {% macro port_l(pin) -%}{{ pin.pin[1]|lower }}{%- endmacro %}
@@ -61,29 +94,29 @@ use stm32h7xx_hal::{gpio::Speed, pac, prelude::*{% for p in ports %}, gpio{{ p|l
 /// Enables GPIO clocks required by the generated board.
 {% endif %}
 pub fn enable_gpio_clocks(dp: &pac::Peripherals) {
-    {%- if ports|length -%}
-    {%- if grouped_writes -%}
-    const MASK: u32 = {%- for p in ports -%}(1u32 << {{ port_bit(p) }}){%- if not loop.last %} |{% endif %}{%- endfor %};
+    {% if ns.ports|length %}
+    {% if grouped_writes %}
+    const MASK: u32 = {% for p in ns.ports %}(1u32 << {{ port_bit(p) }}){% if not loop.last %} |{% endif %}{% endfor %};
     dp.RCC.{{ gpio_bus(spec.mcu) }}.modify(|r, w| unsafe { w.bits(r.bits() | MASK) });
-    {%- else -%}
-    {%- for p in ports -%}
+    {% else %}
+    {% for p in ns.ports %}
     dp.RCC.{{ gpio_bus(spec.mcu) }}.modify(|_, w| w.gpio{{ p|lower }}en().set_bit());
-    {%- endfor -%}
-    {%- endif -%}
-    {%- endif -%}
+    {% endfor %}
+    {% endif %}
+    {% endif %}
 }
 
-{%- if spec.pinctrl|length -%}
-{%- if meta is defined %}
+{% if spec.pinctrl|length %}
+{% if meta is defined %}
 /// Configures pins for {{ meta.board }} using the HAL API.
-{%- else %}
+{% else %}
 /// Configures pins using the HAL API.
-{%- endif %}
+{% endif %}
 pub fn configure_pins_hal(dp: &pac::Peripherals) {
-{%- for p in ports %}
+{% for p in ns.ports %}
     let gpio{{ p|lower }} = dp.GPIO{{ p }}.split();
-{%- endfor %}
-{%- for pin in spec.pinctrl %}
+{% endfor %}
+{% for pin in spec.pinctrl %}
     {%- set is_gpio = pin.func[0:5] == "GPIO_" %}
     {%- set is_i2c  = pin.func[0:3] == "I2C" %}
     {%- set is_ana  = pin.func[0:3] == "ADC" or ("Analog" in pin.func) %}
@@ -101,12 +134,12 @@ pub fn configure_pins_hal(dp: &pac::Peripherals) {
         {%- else %}                      gpio{{ port_l(pin) }}.{{ field(pin) }}.into_alternate::<{{ pin.af }}>()
         {%- endif -%}
     {%- endif %}
-    {%- if pin.func[0:18] == "USB_OTG_HS_ULPI_" or pin.func[0:5] == "SDMMC" or pin.func[0:3] == "SPI" %}
+    {% if pin.func[0:18] == "USB_OTG_HS_ULPI_" or pin.func[0:5] == "SDMMC" or pin.func[0:3] == "SPI" %}
         .set_speed(Speed::VeryHigh)
-    {%- endif %};
-{%- endfor %}
+    {% endif %};
+{% endfor %}
 }
-{%- endif %}
+{% endif %}
 
 {% if meta is defined %}
 /// Enables peripheral clocks for {{ meta.board }}.
