--- a/src/bin/creator/bsp/templates/hal.rs.jinja
+++ b/src/bin/creator/bsp/templates/hal.rs.jinja
@@ -120,8 +120,12 @@ pub fn configure_pins_hal(dp: &pac::Peripherals) {
     {%- set is_gpio = pin.func[0:5] == "GPIO_" %}
     {%- set is_i2c  = pin.func[0:3] == "I2C" %}
     {%- set is_ana  = pin.func[0:3] == "ADC" or ("Analog" in pin.func) %}
-    // {{ pin.pin }} {{ pin.func }} AF{{ pin.af }}
-    let {{ pin.pin | lower }} =
+    // {{ pin.pin }} {{ pin.func }} AF{{ pin.af }}{% if pin.label %} ({{ pin.label }}){% endif %}
+    {%- set base = pin.pin | lower -%}
+    {%- if use_label_names and idents and idents.get(pin.pin) is defined -%}
+    {%- set base = idents.get(pin.pin) -%}
+    {%- endif -%}
+    let {{ base }} =
     {%- if is_gpio %}
         {%- if "Output" in pin.func %} gpio{{ port_l(pin) }}.{{ field(pin) }}.into_push_pull_output()
         {%- elif "Input" in pin.func %}  gpio{{ port_l(pin) }}.{{ field(pin) }}.into_floating_input()
